--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".LanguageApplication"
         android:allowBackup="true"
@@ -12,10 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LanguageApp.Splash"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31" >
 
         <activity
             android:name=".presentation.MainActivity"
+            android:launchMode="singleTop"
             android:exported="true">
 
             <intent-filter>
