--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31" >
 
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.RootActivity"
             android:launchMode="singleTop"
             android:exported="true">
 
